Fixed simple bug on register hover visibility buttons

--- a/css/landing_page.css
+++ b/css/landing_page.css
@@ -30,7 +30,8 @@
     'opsz' 48;
   font-size: 20px;
 }
-.landingbody .showpass:hover {
+
+.landingbody .showpass:hover, .landingbody .hidepass:hover {
   color: var(--visibility-hover);
   background-color: transparent;
 }
